Fix blurry images add blurr to kids faces

--- a/styles/_full.scss
+++ b/styles/_full.scss
@@ -34,7 +34,7 @@
 
         }
         .full-right {
-            background-image:linear-gradient(#0303034c, #0303034c), url(../public/images/seafront-sunday.png);
+            background-image:linear-gradient(#0303034c, #0303034c), url(../public/notblurry/full-right.png);
             background-size:cover;
             background-position:center;
             min-height:60vh;
